--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "behat/behat": "2.5.*",
     "fzaninotto/faker": "1.3.*",
     "guzzle/guzzle": "3.7.*",
+    "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "3.7.*"
   },
   "autoload": {
